fix : 오류 수정, dto 내부 클래스 생성자 private 변경, comment api 응답 코드 변경 - BoardListResponseDTO 내부 BoardDTO getter 추가하여 직렬화 오류 수정 - dto 내부 클래스 생성자 private으로 변경 - Comment API 커스텀 공통 응답 코드 0 -> 200 으로 변경