@@ -4,6 +4,7 @@ import com.pjb.topicboard.model.board.BoardEntity;
 import lombok.Getter;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 public class BoardListResponseDTO {
@@ -11,15 +12,16 @@ public class BoardListResponseDTO {
     private List<BoardDTO> boards;
 
     public BoardListResponseDTO(List<BoardEntity> boards) {
-        this.boards = boards.stream().map(BoardDTO::new).toList();
+        this.boards = boards.stream().map(BoardDTO::new).collect(Collectors.toList());
     }
 
-    public class BoardDTO {
+    @Getter
+    private class BoardDTO {
         private Long id;
         private String name;
         private String description;
 
-        public BoardDTO(BoardEntity board) {
+        private BoardDTO(BoardEntity board) {
             this.id = board.getId();
             this.name = board.getName();
             this.description = board.getDescription();
